# gofolio-cli

./: Cargo.toml  README.md  REPO_STRATEGY.md
docs/: G4-Week-2-AgentForge.md  deliverables.md  evals-gap-rework.md  mvp-plan.md  presearch.md  rust-cli-plan.md  sanity-ghostfolio.md  sanity-openemr.md  tui-bloomberg.md
evals/: MIGRATION_STATUS.md  README.md  models.yaml  suites.yaml
evals/golden_sets/: account.yaml  activities.yaml  balances.yaml  benchmark.yaml  charts.yaml  dividends.yaml  exchange.yaml  general.yaml  history.yaml  holdings.yaml  investments.yaml  lookup.yaml  market.yaml  profile.yaml
evals/results/: rust-run-20260226-212501.jsonl  rust-run-20260226-212553.jsonl  rust-run-20260226-212616.jsonl  rust-run-20260226-212719.jsonl  rust-run-20260226-213222.jsonl  rust-run-20260226-213528.jsonl  rust-run-20260226-215511.jsonl  rust-run-20260227-071528.jsonl  rust-run-20260227-071820.jsonl  rust-run-20260227-071941.jsonl  rust-run-20260227-072300.jsonl  rust-run-20260227-072315.jsonl  rust-run-20260227-073605.jsonl  rust-run-20260227-073843.jsonl  rust-run-20260227-074128.jsonl  rust-run-20260227-074458.jsonl  rust-run-20260227-074925.jsonl  rust-run-20260227-081144.jsonl  rust-run-20260227-081438.jsonl  rust-run-20260227-081909.jsonl  rust-run-20260227-082414.jsonl  rust-run-20260227-082507.jsonl  rust-run-20260227-083337.jsonl  (+27 more)
src/: app.rs  config.rs  evals.rs  evals_test.rs  evals_tui.rs  key_pool.rs  langsmith.rs  main.rs  markdown.rs  markdown_test.rs  market.rs  provider_cache.rs  text.rs  text_test.rs  theme.rs  warmup.rs
src/agent/: client.rs  (+4 more)
(+107 files in other folders)
